Ensure the menu doesn't overlap content area on larger screens.

--- a/assets/stylesheets/components/_top-navigation.scss
+++ b/assets/stylesheets/components/_top-navigation.scss
@@ -71,8 +71,6 @@
 #site-navigation-wrapper {
 	position: absolute;
 		bottom: 0;
-		left: 0;
-		right: 0;
 }
 
 .main-navigation {
@@ -82,6 +80,9 @@
 	clear: both;
 	display: block;
 	font-family: $font__sans;
+	left: 50%;
+	max-width: $size__site-width;
+	transform: translateX(-50%);
 	width: 100%;
 	z-index: 10000;
 
